--- a/Linux/drone-server/docker-compose.yml
+++ b/Linux/drone-server/docker-compose.yml
@@ -2,22 +2,19 @@ version: '3'
 
 services:
     drone-server:
-        container_name: drone-server-$GITHEAD
+        container_name: drone-server
         image: drone/drone:1.9.1-linux-amd64
         restart: always
-        hostname: drone-server-$GITHEAD
+        hostname: drone-server
         environment:
-            - DRONE_GITLAB_SERVER=https://gitlab.com
-            - DRONE_GITLAB_CLIENT_ID={{DRONE_GITLAB_CLIENT_ID}}
-            - DRONE_GITLAB_CLIENT_SECRET={{DRONE_GITLAB_CLIENT_SECRET}}
-            - DRONE_RPC_SECRET={{DRONE_RPC_SECRET}}
-            - DRONE_SERVER_HOST={{DRONE_SERVER_HOST}}
-            - DRONE_SERVER_PROTO={{DRONE_SERVER_PROTO}}
-            - DRONE_GITLAB_SERVER=https://gitlab.com
-            - DRONE_GITLAB_SERVER=https://gitlab.com
-            - DRONE_GITLAB_SERVER=https://gitlab.com
+            - DRONE_GITLAB_SERVER=http://131.101.156.38/gitlab
+            - DRONE_GITLAB_CLIENT_ID=136593778108287e41c3cc7e79f1c2e902d9b764354329a80b81bcdbbcb89536
+            - DRONE_GITLAB_CLIENT_SECRET=854604360f45106d11f51363a2797eaeda6a3411aa60a3c79a56cc658e78ae5a
+            - DRONE_RPC_SECRET=854604360f45106d11f51363a2797eaeda6a3411aa60a3c79a56cc658e78ae5a
+            - DRONE_SERVER_HOST=131.101.156.37
+            - DRONE_SERVER_PROTO=http
         ports:
             - "80:80"
             - "443:443"
         volumes:
-            - /var/lib/drone:/data
+            - /data/drone/server:/data
