--- a/Windows/drone-runner/docker-compose.yml
+++ b/Windows/drone-runner/docker-compose.yml
@@ -1,18 +1,22 @@
-version: '3'
+version: '3.7'
 
 services:
     drone-runner:
         image: drone/drone-runner-docker:1.5.2-windows-1809-amd64
-        container_name: drone-runner-$GITHEAD
-        hostname: drone-runner-$GITHEAD
+        container_name: drone-runner
+        hostname: drone-runner
         environment:
-            - DRONE_RPC_PROTO=https
-            - DRONE_RPC_HOST=drone.company.com
-            - DRONE_RPC_SECRET=super-duper-secret
+            - DRONE_RPC_PROTO=http
+            - DRONE_RPC_HOST=131.101.156.37
+            - DRONE_RPC_SECRET=854604360f45106d11f51363a2797eaeda6a3411aa60a3c79a56cc658e78ae5a
             - DRONE_RUNNER_CAPACITY=2
             - DRONE_RUNNER_NAME=${HOSTNAME}
         restart: always
         ports:
-            - "3001:3000"
+            - "3000:3000"
         volumes:
-            - //./pipe/docker_engine://./pipe/docker_engine
+          # https://stackoverflow.com/questions/57466568/how-do-you-mount-the-docker-socket-on-windows
+          # docker run -v "//./pipe/docker_engine://./pipe/docker_engine" ...
+          - source: \\.\pipe\docker_engine
+            target: \\.\pipe\docker_engine
+            type: npipe
