--- a/Windows/golang/go-build-gomodcache.yml
+++ b/Windows/golang/go-build-gomodcache.yml
@@ -5,11 +5,10 @@ services:
         image: golang:1.15.2-nanoserver-1809
         container_name: golang-build
         hostname: golang-build
-        #stdin_open: true # docker run -i
-        #tty: true        # docker run -t
         working_dir: C:\gopath\src
         environment:
             - GOPROXY=${GOPROXY:-https://goproxy.cn,https://proxy.golang.org,direct}
+            - GO111MODULE=${GO111MODULE:-on}
             - GOMODCACHE=C:\gopath\pkg.mod
             - GOCACHE=C:\gopath\pkg.build
         volumes:
