--- a/Windows/golang/.env
+++ b/Windows/golang/.env
@@ -1,3 +1,4 @@
 # define env var value
 GOMODCACHE=~/Docker/repo/pkg.mod
 GOCACHE=~/Docker/repo/pkg.build
+GOPROXY=https://goproxy.baidu.com,https://goproxy.cn,https://goproxy.io,https://gocenter.io
