Add docker in docker for golang

--- a/Linux/golang/docker-compose.yml
+++ b/Linux/golang/docker-compose.yml
@@ -16,4 +16,9 @@ services:
             - "1022:22"
         volumes:
             - /data/repo:/data/repo
+
+        # For docker in docker
+            - /var/run/docker.sock:/var/run/docker.sock
+            - /usr/bin/docker:/usr/bin/docker
+
         #command: /bin/sh -c "tmux -f $CONFIG_DIR/scripts/.tmux.conf new -As golang"
