--- a/Linux/golang/docker-compose.yml
+++ b/Linux/golang/docker-compose.yml
@@ -20,5 +20,6 @@ services:
         # For docker in docker
             - /var/run/docker.sock:/var/run/docker.sock
             - /usr/bin/docker:/usr/bin/docker
+            - /usr/local/bin/docker-compose:/usr/local/bin/docker-compose
 
         #command: /bin/sh -c "tmux -f $CONFIG_DIR/scripts/.tmux.conf new -As golang"
